convert classes to records